--- a/minimalist/styles/style.css
+++ b/minimalist/styles/style.css
@@ -1,3 +1,14 @@
+/* adding custom fonts */
+@font-face {
+    font-family: marcellus;
+    src: url("./fonts/Marcellus-Regular.ttf");
+}
+
+:root {
+    --main-color: #f8b281;
+    --secondary-color: #1b1b1b;
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -11,17 +22,11 @@ body {
 
 body {
     background: rgb(66, 66, 66);
+    font-family: marcellus, sans-serif;
 }
 
-:root {
-    --main-color: #f8b281;
-    --secondary-color: #1b1b1b;
-}
-
-/* adding custom fonts */
-@font-face {
-    font-family: "argonite";
-    src: url("./assets/stone\ orgonite.woff");
+section {
+    padding: 5%;
 }
 
 /* 1rem = 16px */
@@ -29,6 +34,36 @@ h2 {
     font-size: 2.5rem;
     line-height: 125%;
     padding: 1rem 0rem;
+}
+
+h3 {
+    font-size: 1.25rem;
+    line-height: 125%;
+}
+
+nav {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+nav svg {
+    cursor: pointer;
+}
+
+.front-page {
+    min-height: 100vh;
+    color: white;
+}
+
+.hero {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100vh;
+    object-fit: cover;
+    z-index: -1;
 }
 
 .links {
@@ -43,9 +78,42 @@ h2 {
 .logo h1 {
     margin-left: 0.5rem;
     font-size: 1rem;
-    font-family: "argonite", sans-serif;
 }
 
 .logo img {
     width: 1.5rem;
+}
+
+.selling-point {
+    margin-top: 25vh;
+    text-shadow: 0px 4px 12px rgba(0, 0, 0, .49);
+    text-align: center;
+}
+
+.selling-point h3 {
+    text-shadow: 0px 4px 12px rgba(0, 0, 0, .49);
+}
+
+.ctas {
+    margin-top: 2rem;
+}
+
+.ctas button {
+    padding: .7rem;
+    font-size: 1rem;
+    border: none;
+    border-radius: .5rem;
+    text-shadow: 0px 4px 24px rgba(0, 0, 0, .22);
+    margin: 1rem;
+}
+
+.cta-main {
+    background-color: var(--main-color);
+    color: var(--secondary-color);
+
+}
+
+.cta-sec {
+    background-color: var(--secondary-color);
+    color: white;
 }
