--- a/minimalist/styles/style.css
+++ b/minimalist/styles/style.css
@@ -18,11 +18,12 @@
 html, 
 body {
     height: 100%;
+    
 }
 
 body {
-    background: rgb(66, 66, 66);
     font-family: marcellus, sans-serif;
+    overflow-x: hidden;
 }
 
 section {
@@ -67,7 +68,23 @@ nav svg {
 }
 
 .links {
-    display: none;
+    position: absolute;
+    background: white;
+    width: 100%;
+    height: 100vh;
+    left: 0;
+    top: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    transform: translateX(100%);
+}
+
+.links a {
+    color: var(--secondary-color);
+    font-size: 2rem;
+    text-decoration: none;
 }
 
 .logo {
@@ -116,4 +133,47 @@ nav svg {
 .cta-sec {
     background-color: var(--secondary-color);
     color: white;
+}
+
+/* Classes section */
+.classes {
+    color: var(--secondary-color);
+    text-align: center;
+}
+
+.videos video {
+    width: 100%;
+    border-radius: 1rem;
+    margin-top: 1rem;
+}
+
+.pilates,
+.yoga,
+.meditation {
+    position: relative;
+}
+
+.videos h3 {
+    position: absolute;
+    color: var(--main-color);
+    text-shadow: 0px 2px 12px rgba(0, 0, 0, 0.4);
+    bottom: 10%;
+    left: 50%;
+    transform: translate(-50%, -10%);
+    font-size: 2rem;
+}
+
+.about {
+    color: var(--secondary-color);
+    text-align: center;
+}
+
+.about p {
+line-height: 200%;
+font-size: 1.2rem;  
+}
+
+.about img {
+    width: 100%;
+    margin-top: 2rem;
 }
