minimalist script and styles, complete project

--- a/minimalist/styles/style.css
+++ b/minimalist/styles/style.css
@@ -50,6 +50,7 @@ nav {
 
 nav svg {
     cursor: pointer;
+    z-index: 5;
 }
 
 .front-page {
@@ -176,4 +177,29 @@ font-size: 1.2rem;
 .about img {
     width: 100%;
     margin-top: 2rem;
+}
+
+@media screen and (min-wiidth: 768px) {
+    body {
+        padding: 10%;
+    }
+
+    .videos {
+        display: flex;
+        gap: 2rem;
+    }
+
+    .about {
+        display: flex;
+        gap: 5rem;
+        justify-content: space-between;
+    }
+
+    .about img {
+        width: 50%;
+    }
+    
+    .about h2 {
+        text-align: start;
+    }
 }
